--- a/packages/client/bundle/index.html
+++ b/packages/client/bundle/index.html
@@ -1,7 +1,8 @@
 <head>
+	<script type="text/javascript"> /* this is dummy */</script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
 	<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
 	<div id="root" />
-<script type="text/javascript" src="/bundle.767dce9e9cf4985f438b.js"></script></body>
+<script type="text/javascript" src="/bundle.787efb9d0d087c81598a.js"></script></body>
